--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,14 +44,35 @@ android {
     }
 }
 
-dependencies {
 
+// Graph
+//repositories {
+//    maven { url "https://jitpack.io" }
+//}
+//dependencies {
+//    implementation 'com.jjoe64:graphview:4.2.2'
+//}
+// Graph
+
+dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+//    implementation 'androidx.core:core-ktx:1.3.1'
+//    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    // implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+//    testImplementation 'junit:junit:4.+'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
+    //noinspection GradleCompatible
+//    implementation 'com.android.support:support-v4:26.1.0'
+
+    //Graph
+    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // For onboarding - leanback
+    implementation("androidx.leanback:leanback:1.2.0-alpha01")
 }
