--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".Pop" />
         <activity android:name=".FocusPopUp" />
         <activity android:name=".PostWorkout" />
+        <activity android:name=".Onboarding.OnboardingActivity" />
     </application>
 
 </manifest>
