--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,10 @@ dependencies {
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //AWS
+    implementation 'com.amazonaws:aws-android-sdk-core:2.2.+'
+    implementation 'com.amazonaws:aws-android-sdk-lambda:2.2.+'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     //noinspection GradleCompatible
 //    implementation 'com.android.support:support-v4:26.1.0'
